<resources>
    <string name="app_name">PostGraduate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="user_headImg">head</string>
    <string name="user_email">email</string>
    <string name="sex">sex</string>
    <string name="user_config_file">userConfigs</string>
    <string name="login_way">loginWay</string>
    <string name="user_account">account</string>
    <string name="user_password">password</string>
    <string name="user_phone">phone</string>
    <string name="user_weibo">weibo</string>
    <string name="user_qq">qq</string>
    <string name="user_nickname">nickname</string>
    <string name="user_verify">verify</string>
    <string name="user_sex">sex</string>
    <string name="sex_male">male</string>
    <string name="sex_female">female</string>
    <string name="user_id">userid</string>
    <string name="course_english_name">courseEnglishName</string>
    <string name="course_math_name">courseMathName</string>
    <string name="course_politics_name">coursePoliticsName</string>
    <string name="course_profess1_name">courseProfess1Name</string>
    <string name="course_profess2_name">courseProfess2Name</string>
    <string name="dbcol_photo_name">dbPicName</string>
    <string name="dbcol_photo_base64">dbPicBase64</string>
    <string name="dbcol_remark">dbRemark</string>
    <string name="dbcol_time">dbTime</string>
    <string name="dbcol_master_state">dbMasterState</string>
    <string name="dbcol_date">dbDate</string>
    <string name="dbcol_flag">dbFlag</string>
    <string name="dbcol_if_recommender">dbIfRec</string>
    <string name="dbcol_if_remote">dbFromRemote</string>
    <string name="dbcol_photo_path">dbPhotoPath</string>
    <string name="dbcol_tablename">dbTableName</string>
    <string name="db_english_table">englishTable</string>
    <string name="db_math_table">mathTable</string>
    <string name="db_politics_table">politicsTable</string>
    <string name="db_profess1_table">professOneTable</string>
    <string name="db_profess2_table">professTwoTable</string>
    <string name="db_footprint_table">footprintTable</string>
    <string name="db_today_recommender_table">todayRecommenderTable</string>
    <string name="dbcol_rec_id">dbRecId</string>
    <string name="dbcol_rec_img_id">dbRecImgId</string>
    <string name="dbcol_rec_remark">dbRecRemark</string>
    <string name="dbcol_rec_subject">dbRecSubject</string>
    <string name="dbcol_rec_type">dbRecType</string>
    <string name="dbcol_rec_display_name">dbRecDisplayName</string>
    <string name="dbcol_rec_is_ad">dbRecIsAd</string>
    <string name="dbcol_rec_if_collect">dbRecIfCollect</string>
    <string name="dbcol_rec_pic_name">dbRecPicName</string>
    <string name="dbcol_cover_pic">dbCoverPic</string>
    <string name="dbcol_cover_note_pic">dbCoverNotePic</string>
    <string name="dbcol_cover_song_file">dbCoverSongFile</string>
    <string name="dbcol_cover_song_name">dbCoverSongName</string>
    <string name="dbcol_cover_singer">dbCoverSinger</string>
    <string name="dbcol_footprint_pic">dbFootprintPic</string>
    <string name="dbcol_diary">dbDiary</string>
    <string name="dbcol_encourage">dbEncourage</string>
    <string name="dbcol_days">dbDays</string>
    <string name="dbcol_daysleft">dbDaysleft</string>
    <string name="dbcol_clocked_days">dbClockedDays</string>
    <string name="dbcol_ifupload">dbIfUpload</string>
    <string name="dbcol_photo_delete">dbPhotoDel</string>
    <string name="upload_no">uploadNO</string>
    <string name="upload_yes">uploadYes</string>
	<string name="db_search_records_table">dbSearchRecordsTable</string>
    <string name="dbcol_search_word">dbSearchWord</string>
    <string name="dir_app">Android/data/ydd</string>
    <string name="dir_cover_song">coverSong</string>
    <string name="dir_cover_pic">coverPic</string>
    <string name="dir_cover_note_pic">coverNotePic</string>
    <string name="dir_today_rec_pic">todayRecPic</string>
    <string name="dir_footprint_pic">footprintPic</string>
    <string name="dir_english">EnglishDir</string>
    <string name="dir_politics">PoliticsDir</string>
    <string name="dir_math">MathDir</string>
    <string name="dir_profess1">ProfessDir1</string>
    <string name="dir_profess2">ProfessDir2</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="phone_num">手机号</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account_setting">账号设置</string>
    <string name="register_illustration">为了您的账号安全，您的手机将会受到验证短信</string>
    <string name="verify_num">验证码</string>
    <string name="obtain_verify_num">获取验证码</string>
    <string name="resend_verify_num">秒后重发</string>
    <string name="next_step">下一步</string>
    <string name="set_password">设置密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="reinput_password">重复密码</string>
    <string name="set_nickname">设置昵称</string>
    <string name="sex_select">选择性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="complete">完成</string>
    <string name="head_img">head.jpg</string>
     <string name="clock_days">clockDays</string>
      <string name="start_day">startDay</string>
    <string name="first_use">firstUse</string>
    <string name="today_rec">今日推荐</string>
    <string name="diary">今天是复习的第1天</string>
    <string name="course_choose">你只能选择四门科目</string>
    <string name="english">英语</string>
    <string name="english1">英语一</string>
    <string name="english2">英语二</string>
    <string name="english3">英语3</string>
    <string name="politics">政治</string>
    <string name="math">数学</string>
    <string name="math1">数学一</string>
    <string name="math2">数学二</string>
    <string name="math3">数学三</string>
    <string name="english_catalog">英语目录</string>
    <string name="math_catalog">数学目录</string>
    <string name="politic_catalog">政治目录</string>
    <string name="profess_catalog">专业课目录</string>
     <string name="no_course">无</string>
    <string name="professional_course">专业课(首字不能相同)</string>
    <string name="professional_one">专业一</string>
    <string name="professional_two">专业二</string>
    <string name="input_professional_course">请输入专业课名称</string>
    <string name="back">返回</string>
    <string name="choose">选择</string>
    <string name="is_first_take_photo">isFirstTakePhoto</string>
    <string name="note_class">noteClass</string>
    <string name="reverse_review">按序复习</string>
    <string name="ebbinghaus_review">艾宾浩斯曲线复习</string>
    <string name="get">get</string>
    <string name="collect">收藏</string>
    <string name="master">已掌握</string>
    <string name="unmaster">不太熟</string>
    <string name="state_master">master</string>
    <string name="state_unmaster">unmaster</string>
    <string name="state_unknow">unknow</string>
    <string name="remark">备注</string>
    <string name="date">2015.1.25</string>
    <string name="problems">重难点</string>
    <string name="count_clock">累计打卡</string>
    <string name="count_note">累计笔记</string>
    <string name="today_add">今日新增</string>
    <string name="piece">篇</string>
    <string name="piece_append">篇新增</string>
    <string name="no">无</string>
    <string name="look_all">查看全部</string>
    <string name="append_note">新增笔记</string>
    <string name="edit_course">编辑课程</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="transfer_to">转移到</string>
    <string name="ensure_change_course_name">确定修改课程名？</string>
    <string name="note_still_exsit">原有笔记仍会存在</string>
    <string name="collect_success">收藏成功</string>
    <string name="jump_tag_footprint">jumpTagFootprint</string>
    <string name="jump_tag_review">jumpTagReview</string>
    <string name="clock">打卡</string>
    <string name="day">天</string>
    <string name="latest_clock_date">lastestClockDate</string>
    <string name="task_complete">你已完成这门课程的复习</string>
    <string name="wonderful">非常棒</string>
    <string name="insist_learn">你已经坚持学习了</string>
    <string name="myfootprint">我的足迹</string>
    <string name="reviewchoose_fra_tag">reviewchooseFraTag</string>
    <string name="footprint_my">My</string>
    <string name="footprint_day">Day</string>
    <string name="yesyterday">Yesterday</string>
    <string name="clocked">打卡第</string>
    <string name="reviewed">复习了</string>
    <string name="appended">新增</string>
    <string name="essence">精华</string>
    <string name="square">广场</string>
    <string name="vip">vip</string>
    <string name="backup">备份</string>
    <string name="personal_center">个人中心</string>
	<string name="contact_us">联系我们</string>
    <string name="weibosdk_demo_login_hint"><b>一键登录按钮：</b>\n（有以下三种样式，第一种为默认效果）</string>
    <string name="weibosdk_demo_login_with_text_hint"><b>登录/注销按钮：</b>\n（有以下两种样式，第一种为默认效果，可修改）</string>
    <string name="weibosdk_demo_logout_hint"><b>注销按钮：</b>\n（注意：该按钮不再进行封装，第三方可直接调用 LogoutAPI，<b>一个 token 不能重复注销多次</b>）</string>
    <string name="weibosdk_demo_logout">注销</string>
    <string name="weibosdk_demo_logout_success">已注销</string>
    <string name="weibosdk_demo_logout_failed">注销失败</string>
    <string name="weibosdk_demo_logout_failed_1">注销失败，请检查 Token 是否正确（一个 token 不能重复注销多次）</string>
    <string name="weibosdk_demo_obtain_token_via_sso_all_in_one">SSO 授权（ALL IN ONE）</string>
    <string name="weibosdk_demo_obtain_token_via_web">SSO 授权（Web）</string>
    <string name="weibosdk_demo_obtain_token_via_sso">SSO 授权（仅客户端）</string>
    <string name="weibosdk_demo_obtain_token_via_signature">Web 授权</string>
    <string name="weibosdk_demo_obtain_token_via_quick_sso">通过微博客户端快速授权</string>
    <string name="weibosdk_demo_obtain_token_via_code">通过 Code 获取 Token</string>
    <string name="weibosdk_demo_obtain_token_logout">用户登出</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="weibosdk_demo_obtain_token_via_sso_hint">使用 SSO 登录前，请检查手机上是否已经安装新浪微博客户端，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 进行认证。</string>
    <string name="essense_email_hint_title">请设置邮箱</string>
    <string name="essense_email_hint_content">下载前倾先设置接收邮箱</string>
    <string name="default_quit">取消</string>
    <string name="default_ensure">确定</string>
    <string name="essense_share_hint_title">先分享，后下载</string>
    <string name="essense_share_hint_content">因为是星级贴，所以要先分享后下载。</string>
    <string name="contact_head_title">联系我们</string>
    <string name="contact_hint_words">反馈内容</string>
    <string name="contact_hint_funcs_words">联系方式</string>
    <string name="default_commit">提交</string>
    <string name="contact_thanks_title">谢谢！</string>
    <string name="contact_thanks_content">我们很重视您的意见，您的意见是我们前进的动力。</string>
    <string name="default_save">保存</string>
    <string name="person_pw_head_title">设置密码</string>
    <string name="person_pw_old_hint">输入旧密码</string>
    <string name="person_pw_new_hint">输入新密码</string>
    <string name="person_pw_new_rehint">再次输入密码</string>
    <string name="person_checknew_hint_title">检测更新</string>
    <string name="person_checknew_hint_content">将为您更新至最新版本</string>
    <string name="default_takephoto">拍照</string>
    <string name="person_headset_album">从相册选择</string>
    <string name="default_share">分享</string>
    <string name="person_contact_hint1">用的不爽，来吐吐槽吧~~~</string>
    <string name="person_contact_hint2">QQ号/邮箱/手机号</string>
    <string name="person_contact_hint3">官方微博@研大大</string>
    <string name="person_contact_hint4">客服QQ：872898799</string>
</resources>