<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:text="@string/course_choose"
        android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:layout_gravity="center_horizontal"
   		 android:gravity="center_horizontal"
        />
     <TextView
        android:text="@string/english"
        android:layout_width="match_parent"
   		android:layout_height="wrap_content"
        />
     <LinearLayout
         android:layout_width="match_parent"
   		 android:layout_height="wrap_content"
   		 android:orientation="horizontal"
         >
	    
	         <TextView
	            android:id="@+id/english1"
	            android:text="@string/english1"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:gravity="center"
	             />
	      
	         <TextView
	            android:id="@+id/english2"
	            android:text="@string/english2"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:gravity="center"
	             />
	        
       </LinearLayout>
 		
 		 <TextView
	        android:text="@string/math"
	        android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
	        />
 		  <View 
           android:layout_width="match_parent"
           android:layout_height="1dp" 
           android:background="#e5e5e5" 
 			/>
 		   <LinearLayout
		         android:layout_width="match_parent"
		   		 android:layout_height="wrap_content"
		   		 android:orientation="horizontal"
		         >
	       
	         <TextView
	             android:id="@+id/math1"
	            android:text="@string/math1"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:layout_weight="1"
	   		 	android:gravity="center"
	             />
	        
	         <TextView
	             android:id="@+id/math2"
	            android:text="@string/math2"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:layout_weight="1"
	   		 	android:gravity="center"
	             />
	         
	         <TextView
	             android:id="@+id/math3"
	            android:text="@string/math3"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:layout_weight="1"
	   		 	android:gravity="center"
	             />
	        
       		</LinearLayout>
     		
	         <TextView
	            android:id="@+id/no_math"
	            android:text="@string/no_course"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:layout_gravity="center"
	   		 	android:gravity="center"
	             />
	        
       	
      
     
       <TextView
        	android:text="@string/politics"
        	android:layout_width="match_parent"
   		 	android:layout_height="wrap_content"
        	/>
       
        <View 
           android:layout_width="match_parent"
           android:layout_height="1dp" 
           android:background="#e5e5e5" 
 		/>
 		 
	         <TextView
	            android:id="@+id/politics"
	            android:text="@string/politics"
	            android:layout_width="80dp"
	   		 	android:layout_height="48dp"
	   		 	android:layout_weight="1"
	   		 	android:gravity="center"
	             />
	      
       
         
         <TextView
	        android:text="@string/professional_course"
	        android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:layout_weight="1"
	        />
          <View 
	           android:layout_width="match_parent"
	           android:layout_height="1dp" 
	           android:background="#e5e5e5" 
	 			/>
          <LinearLayout 
              android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	           android:orientation="horizontal" 
              >
	        <TextView 
	            android:id="@+id/profess_one"
	            android:text="@string/professional_one"
		        android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:layout_weight="1"
	             />
	         <EditText 
	            android:id="@+id/input_profess_course1"
	            android:hint="@string/input_professional_course"
		        android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:layout_weight="5"
	             />
         </LinearLayout>
        
         <LinearLayout 
              android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	           android:orientation="horizontal" 
              >
	        <TextView 
	            android:id="@+id/profess_two"
	            android:text="@string/professional_two"
		        android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:layout_weight="1"
	             />
	         <EditText 
	            android:id="@+id/input_profess_course2"
	            android:hint="@string/input_professional_course"
		        android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:layout_weight="5"
	             />
         </LinearLayout>
          <Button
              android:id="@+id/complete_choose"
            android:text="@string/complete"
            android:layout_width="match_parent"
   		 	android:layout_height="wrap_content"
   		 	android:layout_gravity="center_horizontal"
             />
</LinearLayout>
