<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
	<EditText 
	    android:id="@+id/set_passward"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
        android:layout_width="275dp"
    	android:layout_height="32dp"
    	android:background="@drawable/register_edit_shape"
    	android:hint="@string/set_password"
    	
	    />
	<EditText 
	    android:id="@+id/reinput_passward"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
        android:layout_width="275dp"
    	android:layout_height="32dp"
    	android:background="@drawable/register_edit_shape"
    	android:hint="@string/reinput_password"
    	android:layout_marginTop="8dp"
	    />
	 <EditText 
	    android:id="@+id/set_nickname"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
        android:layout_width="275dp"
    	android:layout_height="32dp"
    	android:background="@drawable/register_edit_shape"
    	android:hint="@string/set_nickname"
    	android:layout_marginTop="8dp"
	    />
	 <RelativeLayout
	      android:layout_width="match_parent"
    	  android:layout_height="wrap_content"
	     >
	     <TextView
	         android:layout_width="wrap_content"
    	  	 android:layout_height="wrap_content"
    	  	 android:layout_alignParentLeft="true"
    	  	 android:layout_marginLeft="12dp"
    	  	 android:text="@string/sex_select"
	         />
	     <LinearLayout
	         android:layout_width="wrap_content"
    	  	 android:layout_height="wrap_content"
    	  	 android:orientation="horizontal"
    	  	 android:layout_alignParentRight="true"
	         >
	         <TextView
	             android:id="@+id/male"
	             android:layout_width="84dp"
    	  	 	 android:layout_height="32dp"
    	  	 	 android:text="@string/male"
	             />
	         <TextView
	             android:id="@+id/female"
	             android:layout_width="84dp"
    	  	 	 android:layout_height="32dp"
    	  	 	 android:text="@string/female"
	            />
	         </LinearLayout>
	     </RelativeLayout>
	<Button
          android:id="@+id/complete_register"
		  android:gravity="center_horizontal"
		  android:layout_gravity="center_horizontal"
	      android:layout_width="wrap_content"
	   	  android:layout_height="34dp"
	      android:text="@string/complete"
	      android:layout_marginTop="42dp"
        />
</LinearLayout>
