<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_checknew_hint_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_checknew_hint_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/quitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_quit" />

        <Button
            android:id="@+id/saveView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_ensure" />
    </LinearLayout>

</LinearLayout>