<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/register_illustration"
    	android:layout_marginTop="12dp"
        />
	<EditText 
	    android:id="@+id/phone"
	    android:gravity="center_horizontal"
	    android:layout_gravity="center_horizontal"
        android:layout_width="270dp"
    	android:layout_height="32dp"
    	android:hint="@string/phone_num"
    	android:layout_marginTop="12dp"
    	android:background="@drawable/register_edit_shape"
	    />
	<LinearLayout 
	    android:layout_gravity="center_horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" 
	    android:layout_marginTop="8dp">
	    <EditText 
		    android:id="@+id/verify_num"
		    android:gravity="center_horizontal"
		    android:layout_gravity="center_horizontal"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/verify_num"
	    	android:background="@drawable/register_edit_shape"
	    	android:layout_weight="1"   	
	    />
	    <Button
		    android:id="@+id/get_verify_num"
		    android:gravity="center_horizontal"
		    android:layout_gravity="center_horizontal"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/obtain_verify_num"
	    	android:layout_weight="1"   
	    />
    </LinearLayout>
    <TextView
          android:id="@+id/next_step"
		  android:layout_gravity="center_horizontal"
	      android:layout_width="wrap_content"
	   	  android:layout_height="32dp"
	   	  android:textColor="#ffffff"
	   	  android:gravity="center"
	      android:text="@string/next_step"
	      android:background="@drawable/register_nextstep"
	      android:layout_marginTop="45dp"
        />
</LinearLayout>
