<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical" >
    <ImageView
         android:layout_width="120dp"
    	 android:layout_height="120dp"
    	 android:src="@drawable/tick"
    	 android:layout_gravity="center_horizontal"
    	 android:layout_marginTop="60dp"
        />
    <TextView
        android:id="@+id/wonderful"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/wonderful"
    	android:layout_gravity="center_horizontal"
      />
    <TextView
        android:id="@+id/learn_complete"
        android:text="@string/task_complete"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="5"
    	android:gravity="center"
    	android:layout_gravity="center"
        />
     <TextView
        android:id="@+id/insist_learn"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/insist_learn"
    	android:layout_gravity="center_horizontal"
      />
     <TextView
        android:id="@+id/insist_clock_days"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
      />
	<TextView
	    android:id="@+id/goto_clock_btn"
	    android:text="@string/clock"
	    android:layout_width="match_parent"
    	android:layout_height="30dp"
    	android:layout_weight="1"
    	android:gravity="center"
    	android:layout_marginTop="20dp"
    	android:background="@drawable/clock"
	    />
</LinearLayout>
